--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -10,9 +10,9 @@
     <meta name="author" content="">
     <meta name="keywords" content="">
     <meta name="description" content="">
-    <link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="/base.css">
+    <link rel="stylesheet" th:href="@{/webjars/bootstrap/4.6.0/css/bootstrap.min.css}">
+    <link rel="stylesheet" type="text/css" href="/css/main/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="/css/main/base.css">
     <link rel="stylesheet"  type="text/css" href="/css/faq/faq.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -20,7 +20,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Jost:wght@300;400;500&family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
     <!-- script
     ================================================== -->
-    <script src="/js/modernizr.js"></script>
+    <script src="/js/main/modernizr.js"></script>
 </head>
 <body data-bs-spy="scroll" data-bs-target="#navbar" data-bs-root-margin="0px 0px -40%" data-bs-smooth-scroll="true"
       tabindex="0">
@@ -416,11 +416,11 @@
         </div>
     </div>
 </div>
-<script src="/js/jquery-1.11.0.min.js"></script>
+<script src="/js/main/jquery-1.11.0.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
-<script type="text/javascript" src="/js/bootstrap.bundle.min.js"></script>
-<script type="text/javascript" src="/js/plugins.js"></script>
-<script type="text/javascript" src="/js/layout.js"></script>
-<script type="text/javascript" src="/js/script.js"></script>
+<script type="text/javascript" src="/js/main/bootstrap.bundle.min.js"></script>
+<script type="text/javascript" src="/js/main/plugins.js"></script>
+<script type="text/javascript" src="/js/main/layout.js"></script>
+<script type="text/javascript" src="/js/main/script.js"></script>
 </body>
 </html>
