--- a/src/main/resources/templates/mainhome.html
+++ b/src/main/resources/templates/mainhome.html
@@ -10,15 +10,16 @@
     <meta name="author" content="">
     <meta name="keywords" content="">
     <meta name="description" content="">
-    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="/style.css">
+    <link rel="stylesheet" type="text/css" href="/css/main/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="/css/main/vendor.css">
+    <link rel="stylesheet" type="text/css" href="/css/main/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Jost:wght@300;400;500&family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
     <!-- script
     ================================================== -->
-    <script src="js/modernizr.js"></script>
+    <script src="/js/main/modernizr.js"></script>
 </head>
 <body data-bs-spy="scroll" data-bs-target="#navbar" data-bs-root-margin="0px 0px -40%" data-bs-smooth-scroll="true" tabindex="0">
 <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
@@ -839,7 +840,7 @@
                                     <a href="#">문의 하기</a>
                                 </li>
                                 <li class="menu-item pb-2">
-                                    <a href="#">자주 묻는 질문</a>
+                                    <a th:href="@{/faq/list}">자주 묻는 질문</a>
                                 </li>
                                 <li class="menu-item pb-2">
                                     <a th:href="@{/apply/seller}">판매자 신청하기</a>
@@ -879,10 +880,10 @@
         </div>
     </div>
 </div>
-<script src="js/jquery-1.11.0.min.js"></script>
+<script src="/js/main/jquery-1.11.0.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
-<script type="text/javascript" src="js/bootstrap.bundle.min.js"></script>
-<script type="text/javascript" src="js/plugins.js"></script>
-<script type="text/javascript" src="js/script.js"></script>
+<script type="text/javascript" src="/js/main/bootstrap.bundle.min.js"></script>
+<script type="text/javascript" src="/js/main/plugins.js"></script>
+<script type="text/javascript" src="/js/main/script.js"></script>
 </body>
 </html>
