--- a/src/main/resources/templates/book/book_detail.html
+++ b/src/main/resources/templates/book/book_detail.html
@@ -47,22 +47,32 @@
             </div>
             <div class="center-detail">
                 <div>
-                    <div class="card my-3">
-                        <div class="card-body">
-                            책 제목:
+                    <div class="pb-3 mb-3 link-body-emphasis text-decoration-none border-bottom"
+                         style="width: 100%; padding-left:10px;">
+                        <h2>
                             <div class="card-text" style="white-space: pre-line;" th:text="${book.subject}"></div>
-                            출판사 :
-                            <div class="card-text" style="white-space: pre-line;" th:text="${book.publisher}"></div>
-                            책 소개:
-                            <div class="card-text" style="white-space: pre-line;" th:text="${book.bookIntroduce}"></div>
-                        </div>
+                        </h2>
+                    </div>
+                    <div class="pb-3 mb-3 link-body-emphasis text-decoration-none border-bottom"
+                         style="width: 100%; padding-left:10px;">
+                        <h6>정가</h6>
+                        <div class="card-text" style="white-space: pre-line;" th:text="${book.price}"></div>
+                        <br>
+                        <h6>할인가</h6>
+                        <div class="card-text" style="white-space: pre-line; color:red;"
+                             th:text="${book.price}"></div>
                     </div>
                 </div>
                 <div>
-                    <div class="card my-3">
-                        <div class="card-body">
-                            가격
-                            <div class="card-text" style="white-space: pre-line;" th:text="${book.price}"></div>
+                    <div class="pb-3 mb-3 link-body-emphasis text-decoration-none border-bottom"
+                         style="width: 100%; padding-left:10px;">
+                        <h5>쿠폰 받기</h5>
+                        <div class="card my-3">
+                            <div class="card-body">
+                                쿠폰 내용
+                                <div class="card-text" style="white-space: pre-line;" th:text="${book.discount}"></div>
+                            </div>
+                            <p>신간 책 이벤트 중입니다</p>
                         </div>
                     </div>
                     <div class="card my-3">
@@ -73,54 +83,71 @@
                     </div>
                 </div>
             </div>
-            <div class="book_right-side">
-                구매 창 예정
-                <div style="margin-bottom:5px">
-                    <a class="btn btn-sm btn-primary" style="width: 150px">바로구매</a>
-                </div>
-                <div style="margin-bottom:5px">
-                    <a class="addCartItem btn btn-sm btn-primary" style="width: 150px" th:id="'addCartItem_' + ${book.id}" onclick="addCartItem(${book.id}); return false;">장바구니 담기</a>
-                </div>
-                <div>
-                    <a th:href="@{|/wish/add/${book.id}|}" onclick="return confirm('찜 목록에 추가 하시겠습니까?')" class="btn btn-sm btn-primary" style="width: 150px">찜 하기</a>
+            <div style="height:100%" class="bg-light">
+                <div class="book_right-side">
+                    <h6>판매중</h6>
+                    <div style="margin-bottom:5px">
+                        <a class="btn btn-sm btn-primary" style="width: 150px">바로구매</a>
+                    </div>
+                    <div style="margin-bottom:5px">
+                        <a class="addCartItem btn btn-sm btn-primary" style="width: 150px"
+                           th:id="'addCartItem_' + ${book.id}" onclick="addCartItem(${book.id}); return false;">장바구니
+                            담기</a>
+                    </div>
+                    <div>
+                        <a th:href="@{|/wish/add/${book.id}|}" onclick="return confirm('찜 목록에 추가 하시겠습니까?')"
+                           class="btn btn-sm btn-primary" style="width: 150px">찜 하기</a>
+                    </div>
                 </div>
             </div>
         </div>
         <div class="book_middle-section">
             <div id="header" class="book_navbar header-scrolled text-black bg-light">
-                    <div class="book_nav-container">
-                        <div class="card-body btn btn-light">
-                            도서정보
-                        </div>
-                        <div class="card-body btn btn-light">
-                            리뷰
-                        </div>
-                        <div class="card-body" style="font-size:20px; color: red;">
-                            <div class="card-text" style="white-space: pre-line;" th:text="${book.price + ' 원'}"></div>
-                        </div>
-                        <div style="margin-bottom:5px" class="justify-content-end">
-                            <a class="btn btn-sm btn-primary" style="width: 100px; margin-right:10px;">바로구매</a>
-                            <a class="btn btn-sm btn-primary"style="width: 120px" th:id="'addCartItem_' + ${book.id}" onclick="addCartItem(${book.id}); return false;">장바구니 담기</a>
-                        </div>
+                <div class="book_nav-container">
+                    <div class="card-body btn btn-light">
+                        도서정보
                     </div>
+                    <div class="card-body btn btn-light">
+                        리뷰
+                    </div>
+                    <div class="card-body" style="font-size:20px; color: red;">
+                        <div class="card-text" style="white-space: pre-line;" th:text="${book.price + ' 원'}"></div>
+                    </div>
+                    <div style="margin-bottom:5px" class="justify-content-end">
+                        <a class="btn btn-sm btn-primary" style="width: 100px; margin-right:10px;">바로구매</a>
+                        <a class="btn btn-sm btn-primary" style="width: 120px" th:id="'addCartItem_' + ${book.id}"
+                           onclick="addCartItem(${book.id}); return false;">장바구니 담기</a>
+                    </div>
+                </div>
             </div>
             <div class="book_info">
                 <div class="formation-item d-flex" style="padding-top:5px;">
                     <article class="blog-post">
+                        <div class="card-text" style="white-space: pre-line;" th:text="${book.publisher}"></div>
+                        <div class="card-text" style="white-space: pre-line;" th:text="${book.bookIntroduce}"></div>
                         <h2 class="display-5 link-body-emphasis mb-1">Sample blog post</h2>
                         <p class="blog-post-meta">January 1, 2021 by <a href="#">Mark</a></p>
 
-                        <p>This blog post shows a few different types of content that’s supported and styled with Bootstrap. Basic typography, lists, tables, images, code, and more are all supported as expected.</p>
+                        <p>This blog post shows a few different types of content that’s supported and styled with
+                            Bootstrap. Basic typography, lists, tables, images, code, and more are all supported as
+                            expected.</p>
                         <hr>
-                        <p>This is some additional paragraph placeholder content. It has been written to fill the available space and show how a longer snippet of text affects the surrounding content. We'll repeat it often to keep the demonstration flowing, so be on the lookout for this exact same string of text.</p>
+                        <p>This is some additional paragraph placeholder content. It has been written to fill the
+                            available space and show how a longer snippet of text affects the surrounding content. We'll
+                            repeat it often to keep the demonstration flowing, so be on the lookout for this exact same
+                            string of text.</p>
                         <h2>Blockquotes</h2>
                         <p>This is an example blockquote in action:</p>
                         <blockquote class="blockquote">
                             <p>Quoted text goes here.</p>
                         </blockquote>
-                        <p>This is some additional paragraph placeholder content. It has been written to fill the available space and show how a longer snippet of text affects the surrounding content. We'll repeat it often to keep the demonstration flowing, so be on the lookout for this exact same string of text.</p>
+                        <p>This is some additional paragraph placeholder content. It has been written to fill the
+                            available space and show how a longer snippet of text affects the surrounding content. We'll
+                            repeat it often to keep the demonstration flowing, so be on the lookout for this exact same
+                            string of text.</p>
                         <h3>Example lists</h3>
-                        <p>This is some additional paragraph placeholder content. It's a slightly shorter version of the other highly repetitive body text used throughout. This is an example unordered list:</p>
+                        <p>This is some additional paragraph placeholder content. It's a slightly shorter version of the
+                            other highly repetitive body text used throughout. This is an example unordered list:</p>
                     </article>
                 </div>
             </div>
