--- a/src/main/resources/templates/rebate/rebate_seller.html
+++ b/src/main/resources/templates/rebate/rebate_seller.html
@@ -9,34 +9,21 @@
     </div>
     <div class="main-container">
         <div class="head-box">
-            <h2>판매자 정산 페이지</h2>
+            <h2>[[${member.username}]]님의 정산 페이지</h2>
         </div>
         <div class="body-box">
             <table class="table table-hover">
                 <thead>
                 <tr>
-                    <th scope="col">책</th>
-                    <th>판매가</th>
-                    <th>판매 부수</th>
-                    <th>수수료</th>
+                    <th scope="col">정산ID</th>
                     <th>정산 금액</th>
                 </tr>
                 </thead>
                 <tbody class="table-group-divider">
-                <!--/*<tr th:each="book : ${bookList}">*/-->
-                <!--/*<th scope="row">[[${book.title}]]</th>*/-->
-                <!--/*<td th:text="${book.price * book.discount}"> 원</td>*/-->
-                <!--/*<td>[[${book.sellCount}]] 부</td>*/-->
-                <!--/*<td>[[${rebate.totalFee}]] %</td>*/-->
-                <!--/*<td th:text="${book.price * book.discount * rebate.totalFee}"> 원</td>*/-->
-                <!--/*</tr>*/-->
-                <!--/*<tr>*/-->
-                <!--/*<th scope="row">합계</th>*/-->
-                <!--/*<td>판매 금액 합계</td>*/-->
-                <!--/*<td>판매 부수 합계</td>*/-->
-                <!--/*<td>[[${rebate.totalFee}]] %</td>*/-->
-                <!--/*<td>정산 금액 총액</td>*/-->
-                <!--/*</tr>*/-->
+                <tr >
+                    <td></td>
+                    <td></td>
+                </tr>
                 </tbody>
             </table>
 
